--- a/install_apache.yml
+++ b/install_apache.yml
@@ -9,25 +9,27 @@
     apt:
       name: apache2
       state: latest
-    #when: ansible_distribution == "Ubuntu" or
-   #when: ansible_distribution in ["Debian", "Ubuntu"] 
+    #when: ansible_distribution == "Ubuntu"
+    when: ansible_distribution in ["Kali"]
 
   - name: add php support for apache
     apt:
       name: libapache2-mod-php
       state: latest
-   #when: ansible_distribution == "Ubuntu"
+    #when: ansible_distribution in ["Debian", "Ubuntu"] 
+    when: ansible_distribution in ["Debian", "Ubuntu", "Kali"]
 
-
-- name: install apache2 package
-    dnf:
+  - name: install apache2 package
+    dnf5:
       name: httpd
       state: latest
-    #when: ansible_distribution == "Centos" or
+    when: ansible_distribution == "CentOS"
    #when: ansible_distribution in ["Debian", "Ubuntu"] 
-
+    #when: ansible_distribution in ["Redhat", "Centos"]
   - name: add php support for apache
-    dnf:
+    dnf5:
       name: php
       state: latest
-   #when: ansible_distribution == "Centos"
+    #when: ansible_distribution == "Centos"
+   # when: ansible_distribution in ["Redhat", "Centos"]
+    when: ansible_distribution in ["CentOS", "RedHat"]
