--- a/install_apache.yml
+++ b/install_apache.yml
@@ -7,29 +7,21 @@
 
   - name: install apache2 package
     apt:
-      name: apache2
+      name: 
+        - apache2
+        - libapache2-mode-php
       state: latest
+      update_cache: yes
     #when: ansible_distribution == "Ubuntu"
     when: ansible_distribution in ["Kali"]
 
-  - name: add php support for apache
-    apt:
-      name: libapache2-mod-php
-      state: latest
-    #when: ansible_distribution in ["Debian", "Ubuntu"] 
-    when: ansible_distribution in ["Debian", "Ubuntu", "Kali"]
-
   - name: install apache2 package
-    dnf5:
-      name: httpd
+    yum:
+      name: 
+        - httpd
+        - php
       state: latest
-    when: ansible_distribution == "CentOS"
+      update_cache: yes
+    #when: ansible_distribution == "CentOS"
    #when: ansible_distribution in ["Debian", "Ubuntu"] 
-    #when: ansible_distribution in ["Redhat", "Centos"]
-  - name: add php support for apache
-    dnf5:
-      name: php
-      state: latest
-    #when: ansible_distribution == "Centos"
-   # when: ansible_distribution in ["Redhat", "Centos"]
-    when: ansible_distribution in ["CentOS", "RedHat"]
+    when: ansible_distribution in ["Redhat", "Centos"]
